# jellyfin-desktop-sdl-cef

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.claude/: settings.json
.github/workflows/: build-linux-flatpak.yml  build-macos.yml  build-windows.yml
cmake/: CompleteBundleMac.cmake.in  FindCEF.cmake
dev/: README.md  download_cef.py
dev/appimage/: Dockerfile  build-docker.sh  jellyfin-desktop-cef-git-junest.sh
dev/flatpak/: README.md  build.sh  org.jellyfin.JellyfinDesktopCEF.yml
dev/macos/: README.md  build.sh  build_bundle.sh  bundle.sh  common.sh  run.sh  setup.sh
dev/windows/: build-ssh.sh  build.bat
docs/plans/: 2024-12-30-macos-hdr-design.md  2025-12-28-hello-world-cef-implementation.md  2025-12-28-mpv-overlay-design.md  2026-01-18-hidpi-support.md  2026-01-18-subtitle-integration-design.md
resources/: find-webclient.css  find-webclient.js  index.html
resources/linux/: jellyfin-desktop-cef.desktop  org.jellyfin.JellyfinDesktopCEF.desktop  org.jellyfin.JellyfinDesktopCEF.metainfo.xml
resources/macos/: Info.plist.in
src/: cef_app.cpp  cef_app.h  cef_client.cpp  cef_client.h  cgl_context.h  cgl_context.mm  egl_context.cpp  egl_context.h  logging.cpp  logging.h  macos_app.mm  macos_layer.h  macos_layer.mm  main.cpp  media_session.cpp  media_session.h  media_session_mpris.cpp  media_session_mpris.h  metal_compositor.h  metal_compositor.mm  mpv_player.cpp  mpv_player.h  mpv_player_vk.cpp  mpv_player_vk.h  opengl_compositor.cpp  opengl_compositor.h  renderer.cpp  renderer.h  settings.cpp  settings.h  vulkan_compositor.cpp  vulkan_compositor.h  vulkan_context.cpp  vulkan_context.h  wayland_subsurface.cpp  wayland_subsurface.h
src/cef/: cef_app.cpp  cef_app.h  cef_client.cpp  cef_client.h  resource_handler.cpp
src/compositor/: metal_compositor.h  metal_compositor.mm  opengl_compositor.cpp  opengl_compositor.h
src/context/: egl_context.cpp  egl_context.h  gl_loader.cpp  gl_loader.h  vulkan_context.cpp  wgl_context.cpp  wgl_context.h
src/input/: browser_layer.h  sdl_to_vk.h
src/platform/: macos_app.mm  wayland_subsurface.cpp  wayland_subsurface.h  windows_app.cpp  windows_video_layer.cpp  x11_video_layer.cpp
src/player/: opengl_renderer.cpp  opengl_renderer.h  video_renderer.h  video_stack.cpp
src/player/macos/: media_session_macos.mm
src/player/mpris/: media_session_mpris.cpp
src/player/mpv/: mpv_player_gl.cpp  mpv_player_gl.h  mpv_player_vk.cpp  mpv_player_vk.h
src/shaders/: overlay.frag  overlay.frag.spv  overlay.vert  overlay.vert.spv
src/ui/: menu_overlay.cpp
src/web/: index.html  mpv-audio-player.js  mpv-player-core.js  mpv-video-player.js  native-shim.js
